# Proyecto-III-Datos-II

./: CMakeLists.txt  blocks.hpp  main.cpp  run_system.sh  startnodes.bat
commands/: clearnodes.bat  run instructions.txt  startnodes.bat
cpp/: controller_node.cpp  raid_parity.cpp
disk_config/: node1.xml  node2.xml  node3.xml  node4.xml
python/: block2pdf.py  disknode.py  generate_xml.py  pdf2block.py
python/disk_config/: node1.xml  node2.xml  node3.xml  node4.xml
